Add connection implementation.

--- a/src/signal/CMakeLists.txt
+++ b/src/signal/CMakeLists.txt
@@ -4,11 +4,16 @@ add_library(${PROJECT_NAME})
 
 target_sources(${PROJECT_NAME} PRIVATE
 	${PROJECT_INCLUDE_DIR}/asx/signal/Connection.h
+	${PROJECT_INCLUDE_DIR}/asx/signal/ConnectionShared.h
+	${PROJECT_INCLUDE_DIR}/asx/signal/ConnectionUnique.h
 	${PROJECT_INCLUDE_DIR}/asx/signal/Signal.h
+	${PROJECT_INCLUDE_DIR}/asx/signal/Slot.h
 )
 
 target_sources(${PROJECT_NAME} PRIVATE
 	Connection.cpp
+	ConnectionShared.cpp
+	ConnectionUnique.cpp
 	Signal.cpp
 )
 
