Continue core development.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,12 +5,17 @@ add_library(${PROJECT_NAME})
 
 target_sources(${PROJECT_NAME} PRIVATE
 	${PROJECT_INCLUDE_DIR}/asx/core/Factory.h
+	${PROJECT_INCLUDE_DIR}/asx/core/Object.h
 	${PROJECT_INCLUDE_DIR}/asx/core/Properties.h
 	${PROJECT_INCLUDE_DIR}/asx/core/Property.h
+	${PROJECT_INCLUDE_DIR}/asx/core/PropertyTemplateMember.h
+	${PROJECT_INCLUDE_DIR}/asx/core/PropertyTemplateMethod.h
+	${PROJECT_INCLUDE_DIR}/asx/core/PropertyTemplateMethods.h
 )
 
 target_sources(${PROJECT_NAME} PRIVATE
 	Factory.cpp
+	Object.cpp
 	Properties.cpp
 	Property.cpp
 )
